/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    maven {
        url = uri('https://jcenter.bintray.com')
    }
}

dependencies {
    implementation 'ch.qos.logback:logback-classic:1.0.13'
    implementation 'net.serenity-bdd:serenity-core:2.2.5'
    implementation 'net.serenity-bdd:serenity-screenplay:2.2.9'
    implementation 'net.serenity-bdd:serenity-screenplay-webdriver:2.2.9'
    implementation 'org.influxdb:influxdb-java:2.12'
    testImplementation 'net.serenity-bdd:serenity-junit:2.2.9'
    testImplementation 'net.serenity-bdd:serenity-cucumber5:2.2.5'
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.assertj:assertj-core:3.6.2'
    testImplementation 'org.hamcrest:hamcrest-all:1.3'
}

group = 'org.automation'
version = '1.0-SNAPSHOT'
description = 'Sample Serenity BDD project using Cucumber'
sourceCompatibility = '1.8'

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

//java {
//    toolchain {
//        languageVersion = JavaLanguageVersion.of(21)
//    }
//}

//tasks.withType(Test).configureEach {
//    useJUnitPlatform()
//    jvmArgs = jvmArgs + ['--add-opens=java.base/java.util=ALL-UNNAMED']
//}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
